[project]
name = "joy-assistant"
version = "0.1.0"
description = "Lightweight voice assistant pipeline inspired by Blade Runner 2049's JOY."
authors = [
  {name = "JOY Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "transformers>=4.42",
  "accelerate>=0.33",
  "bitsandbytes>=0.43",
  "sentencepiece>=0.2",
  "soundfile>=0.12",
  "pydub>=0.25",
  "numpy>=1.26"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
